# ROS2_yolo

./: .gitignore  README.md
src/my_camera_pkg/my_camera_pkg/: camera_stride_pub.py  camera_sub.py
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: camera_pub.cpp  camera_pub2.cpp  camera_pub3.cpp  camera_sub.cpp  my_first_node.cpp  test.cpp
src/my_newyolo_pkg/: package.xml  setup.cfg  setup.py
src/my_newyolo_pkg/my_newyolo_pkg/: config.py  new_yolo.py  new_yolo2.py
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: my_first_node.py  robot_news_station.py  smartphone.py
src/my_tensorRt_pkg/: setup.py
src/my_undistort_img2_pkg/: CMakeLists.txt  package.xml
src/my_undistort_img2_pkg/src/: perspTransMatrix.yml  undistort_img.cpp
src/my_undistort_img2_pkg/src/include/: birdview.h  camera.h
src/my_undistort_img2_pkg/src/src/: camera.cpp
src/my_undistort_img_pkg/: CMakeLists.txt
src/my_undistort_img_pkg/src/: undistort_img.cpp  undistort_img1.cpp  undistort_img2.cpp  undistort_img3.cpp  undistort_img4.cpp
src/my_undistort_img_pkg/src/Source/: camera.cpp
src/my_undistort_img_pkg/src/src/: camera.cpp
src/my_yolo_launch/launch/: 2cam_yolo.launch.py  4cam.launch.py  camera.launch.py  rstp_camera_test.launch.py  rstp_object_detection.launch.py  yolo_app.launch.py
src/my_yolov5_pkg/: setup.py
src/my_yolov5_pkg/my_yolov5_pkg/: yolo_2cam_detect.py  yolo_detect.py
src/ros2_usb_camera/: CMakeLists.txt  package.xml
